--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
     <groupId>org.vagif</groupId>
     <artifactId>springProject</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -17,7 +16,6 @@
     </parent>
 
     <!-- don't change above -->
-
 
 
     <build>
@@ -51,6 +49,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
@@ -65,9 +67,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-
-
     </dependencies>
 
 
